[gd_scene load_steps=2 format=2]

[ext_resource path="res://interface/UI.gd" type="Script" id=2]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgeOrHumidfy" type="Button" parent="."]
margin_left = 57.0
margin_top = 509.0
margin_right = 232.0
margin_bottom = 565.0
text = "Age / Humidify"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderContainer" type="Node2D" parent="."]
position = Vector2( 247.914, 550.921 )

[node name="TimelineSlider" type="HSlider" parent="SliderContainer"]
margin_left = 74.1624
margin_right = 574.162
margin_bottom = 16.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SliderContainer"]
margin_left = 11.6541
margin_top = 1.05951
margin_right = 71.6541
margin_bottom = 15.0595
text = "Timeline:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgeInfo" type="Node2D" parent="."]

[node name="Label" type="Label" parent="AgeInfo"]
margin_left = 260.0
margin_top = 530.0
margin_right = 351.0
margin_bottom = 544.0
text = "Years passed: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YearsValue" type="Label" parent="AgeInfo"]
margin_left = 353.0
margin_top = 530.0
margin_right = 393.0
margin_bottom = 545.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="AgeOrHumidfy" to="." method="_on_AgeOrHumidfy_pressed"]
